# disco

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
checkpoints/: README.md
data/: README.md
disco/: __init__.py
results/: README.md
results/GFAP/: config.json  files_2tasks1x2classes_3images_scribble_train_150_results.csv  files_results.csv  history.json  pd_summary_results.csv
results/NeuN/: config.json  files_2tasks1x2classes_3images_scribble_train_150_results.csv  files_results.csv  history.json  pd_summary_results.csv
results/Olig2/: config.json  files_2tasks1x2classes_3images_scribble_train_150_results.csv  files_results.csv  history.json  pd_summary_results.csv
results/PECAM/: config.json  files_2tasks1x2classes_3images_scribble_train_150_results.csv  files_results.csv  history.json  pd_summary_results.csv
results/iba1/: config.json  files_2tasks1x2classes_3images_scribble_train_150_results.csv  files_results.csv  history.json  pd_summary_results.csv
scripts/: 01_TestingImages.py  02_Testing.py  03_Tunning_crossValidate.py
scripts/legacy/: CorBiasCCC.py  CorBiasCCC_normalized.py  CrossValidationVisual.py  IoU_cal.py  IoU_loop.py  IoU_thresholds.py  IoU_thresholds_imageSave.py  PatrickOrganize.py  PerformanceTrend.py  StackSampProp.py  Testing_crossValidate.py  Tunning.py  concateCell.py
